Fixed an issue with alignment classes

--- a/resources/css/springboard.css
+++ b/resources/css/springboard.css
@@ -58,15 +58,27 @@ html, body {
 /* Simple text alignment classes */
 
 .centerText {
-	text-align: center;
+	text-align: center !important;
+}
+
+.centerText * {
+	text-align: center !important;
 }
 
 .leftText {
-	text-align: left;
+	text-align: left !important;
+}
+
+.leftText * {
+	text-align: left !important;
 }
 
 .rightText {
-	text-align: right;
+	text-align: right !important;
+}
+
+.rightText * {
+	text-align: right !important
 }
 
 /* Border class for divs, etc. */
@@ -223,7 +235,7 @@ caption {
 
 tr, th {
 	border-bottom: 1px solid #A9A9A9;
-	text-align:left;
+	text-align: left;
 }
 
 tr {
